--- a/src/modules/dex/directives/myBalance/myBalance.less
+++ b/src/modules/dex/directives/myBalance/myBalance.less
@@ -52,16 +52,16 @@ body.dex-demo .dex-wrapper {
           text-overflow: ellipsis;
           overflow: hidden;
 
-          @media screen and (min-width: 1600px) {
-            min-width: 300px;
+          @media screen and (min-width: 1025px) and (max-width: 1550px) {
+            max-width: 250px;
           }
 
-          @media screen and (min-width: 1301px) and (max-width: 1600px) {
-            width: 250px;
+          @media screen and (max-width: 400px) {
+            max-width: 300px;
           }
 
-          @media screen and (min-width: 1025px) and (max-width: 1300px) {
-            max-width: 200px;
+          @media screen and (min-width: 660px) and (max-width: 820px) {
+            max-width: 220px;
           }
 
           span {
